--- a/app/views/layouts/post_partial/_comment_post.html.erb
+++ b/app/views/layouts/post_partial/_comment_post.html.erb
@@ -1,5 +1,5 @@
 <!--コメント投稿フォーム-->
-<%= form_with model: [post, post_comment], url: public_post_comments_path(post, post_id: post.id), method: :post do |f| %>
+<%= form_with model: [post, post_comment], url: public_post_post_comments_path(post), method: :post do |f| %>
   <div class="d-flex bd-hightlight px-3">
     <div class="flex-grow-1 bd-hightlight"><%= f.text_area :body, placeholder:"コメントを入力",class: 'my-3 px-1 col-12 border border-info',rows: '2' %></div>
     <div class="bd-hightlight">
@@ -26,7 +26,7 @@
           </div>
           <% if  post_comment.user == current_user %>
             <div class="ml-auto bd-hightlight">
-              <%= link_to '削除', public_post_comment_path(post_comment, post_comment.post), method: :delete, data: {cofirm: '本当に消しますか?' }, class: "btn btn-outline-danger mr-3" %>
+              <%= link_to '削除', public_post_post_comment_path(post_comment.post,post_comment), method: :delete, data: {cofirm: '本当に消しますか?' }, class: "btn btn-outline-danger mr-3" %>
             </div>
           <% end %>
         </div>
