--- a/app/views/public/topics/index.html.erb
+++ b/app/views/public/topics/index.html.erb
@@ -10,24 +10,33 @@
 
 
   <div class="col-9">
-    <div class="d-flex justify-content-center">
-      <div class="h5">新しいトピック</div>
+    <div class="d-flex justify-content-center mb-3">
+      <div><%= link_to '新しいトピックを作成する', new_public_topic_path, class: 'btn btn-info' %></div>
     </div>
-    <%= render partial: 'new',lacals: { topic: @topic, topic: @topic_comment } %>
 
     <div class="d-flex justify-content-center border-top border-info">
       <div class="h5 pt-4">すべてのトピック</div>
     </div>
-    <div class="d-flex flex-column">
-      <% @topics.each do |topic| %>
-        <div>
-          <%= topic.title %>
-          <%= topic.topic_comments.each do |comment| %>
-            <%= comment.body %>
-          <% end %>
-        </div>
-      <% end %>
-    </div>
+
+    <% @topics.each do |topic| %>
+      <div class="border-bottom border-info py-2 col-12">
+        <%= link_to public_topic_path(topic), class: 'text-dark mr-auto bd-hightlight' do %>
+          <div class="d-flex bd-hightlight">
+            <div class="bd-hightlight">
+              <%= image_tag topic.user.get_icon_image(30,30), class: 'border rounded-circle' %>
+              <%= topic.user.nickname %> 【<%= topic.title %>】
+            </div>
+            <div class="flex-grow-1 bd-hightlight">
+              <% topic.tags.each do |tag| %>
+                # <%= tag.name %>
+               <% end %>
+            </div>
+            <div class="bd-hightlight"><%= topic.created_at.strftime('%Y/%m/%d %H:%M') %></div>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+
   </div>
 
 </div>
