--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,13 +1,13 @@
 <div class="row">
 
   <!--サイドバー-->
-  <div class="col-5 mb-5 pr-4 border-right border-info">
+  <div class="col-4 mb-5 pr-4 border-right border-info">
     <%= render partial: 'layouts/user_info',locals: { user: @user, goal: @goal } %><br>
     <%= render partial: 'calendar' ,locals: { posts: @posts } %><br>
     <%= render partial: 'public/posts/new',locals: { new_post: @new_post } %>
   </div>
 
-  <div class="d-felx flex-column  col-7">
+  <div class="d-felx flex-column col-8 pl-4">
     <div class="border border-info mb-4 p-4">
       こんにちは、<%= @current_user.nickname %>さん！<br>
       今日はどんな一日になりましたか？<br>
@@ -98,6 +98,18 @@
         </div>
         <div class="d-flex bd-highlight mt-3">
           <div class="bd-highlight text-info">週の目標</div>
+          <div class="bd-highlight flex-grow-1">
+            <div class="pl-4 overflow-auto"  style="height:150px;">
+              <% @objectives_week.each do |week| %>
+                <i class="fa-solid fa-fire-flame-curved"></i> <%= week.title %><br>
+                  <% if week.did_it.present? %>　<i class="fa-solid fa-crop"></i>　<%= week.did_it %><br><% end %>
+                  <% if week.could_not.present? %>　<i class="fa-solid fa-crop-simple"></i>　<%= week.could_not %><br><% end %>
+              <% end %>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex bd-highlight mt-3">
+          <div class="bd-highlight text-info"><%= の目標</div>
           <div class="bd-highlight flex-grow-1">
             <div class="pl-4 overflow-auto"  style="height:150px;">
               <% @objectives_week.each do |week| %>
