[add]top 明日の目標欄追加

--- a/app/views/public/homes/_calendar.html.erb
+++ b/app/views/public/homes/_calendar.html.erb
@@ -1,5 +1,5 @@
 <div class="h5 text-info m-0">進捗カレンダー</div>
-<%= month_calendar events: @posts do |date, posts| %>
+<%= month_calendar events: @post do |date, posts| %>
   <%= date.day %>
 
   <% posts.each do |post| %>
