--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -3,7 +3,7 @@
   <!--サイドバー-->
   <div class="col-4 mb-5 pr-4 border-right border-info">
     <%= render partial: 'layouts/user_info',locals: { user: @user, goal: @goal } %><br>
-    <%= render partial: 'calendar' ,locals: { posts: @posts } %><br>
+    <%= render partial: 'calendar' ,locals: { post: @post } %><br>
     <%= render partial: 'public/posts/new',locals: { new_post: @new_post } %>
   </div>
 
@@ -13,6 +13,7 @@
       今日はどんな一日になりましたか？<br>
       一日を振り返って、達成度を投稿しましょう！
     </div>
+
 
     <div class="border border-primary my-4 p-4">
       <div class="h5 text-primary">現在の目標</div>
@@ -33,6 +34,7 @@
           <% end %>
         </div>
       </div>
+
       <div class="d-flex bd-highlight py-2">
         <div class="bd-highlight text-info">今月の目標　：　</div>
         <div class="bd-highlight">
@@ -56,6 +58,7 @@
           <% end %>
         </div>
       </div>
+
       <div class="d-flex bd-highlight py-2">
         <div class="bd-highlight text-info">今週の目標　：　</div>
         <div class="bd-highlight">
@@ -78,6 +81,15 @@
             <span><%= link_to '設定',new_public_objective_path, class: "btn btn-outline-info" %></span>
           <% end %>
         </div>
+      </div>
+
+      <div class="d-flex bd-highlight py-2">
+        <% if @objective_day.present? %>
+          <div class="bd-highlight text-info"><%= @objective_day.created_at.since(1.days).strftime('%m/%d') %>の目標 ：　</div>
+          <div class="bd-highlight">
+            <%= @objective_day.tomorrow_objective %>
+          </div>
+        <% end %>
       </div>
     </div>
 
@@ -108,19 +120,6 @@
             </div>
           </div>
         </div>
-        <div class="d-flex bd-highlight mt-3">
-          <div class="bd-highlight text-info"><%= の目標</div>
-          <div class="bd-highlight flex-grow-1">
-            <div class="pl-4 overflow-auto"  style="height:150px;">
-              <% @objectives_week.each do |week| %>
-                <i class="fa-solid fa-fire-flame-curved"></i> <%= week.title %><br>
-                  <% if week.did_it.present? %>　<i class="fa-solid fa-crop"></i>　<%= week.did_it %><br><% end %>
-                  <% if week.could_not.present? %>　<i class="fa-solid fa-crop-simple"></i>　<%= week.could_not %><br><% end %>
-              <% end %>
-            </div>
-          </div>
-        </div>
-
       </div>
     <% end %>
 
