--- a/app/views/public/topics/new.html.erb
+++ b/app/views/public/topics/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @topic, url: public_topics_path, local:true, method: :post do |f| %>
+<%= form_with model: @topic, url: public_topics_path, method: :post do |f| %>
   <div class="d-flex justify-content-between my-3">
     <div class="col-2">トピック名</div>
     <div class="col-10"><%= f.text_field :title, placeholder:"トピック名を入力", class: 'px-1 col-12' %></div>
