[fix]削除ボタンの確認コンフォーム

--- a/app/views/layouts/post_partial/_comment_post.html.erb
+++ b/app/views/layouts/post_partial/_comment_post.html.erb
@@ -26,7 +26,7 @@
           </div>
           <% if  post_comment.user == current_user %>
             <div class="ml-auto bd-hightlight">
-              <%= link_to '削除', public_post_post_comment_path(post_comment.post,post_comment), method: :delete, data: {cofirm: '本当に消しますか?' }, class: "btn btn-outline-danger mr-3" %>
+              <%= link_to '削除', public_post_post_comment_path(post_comment.post,post_comment), method: :delete, class: "btn btn-outline-danger mr-3" %>
             </div>
           <% end %>
         </div>
@@ -35,3 +35,4 @@
     <% end %>
   </div>
 </div>
+
