--- a/app/views/layouts/post_partial/_body.html.erb
+++ b/app/views/layouts/post_partial/_body.html.erb
@@ -4,7 +4,7 @@
     <% if user == current_user %>
       <div class="mr-auto bd-hightlight">
         <div class="d-flex justify-content-between">
-          <%= link_to '削除', public_post_path(post), method: :delete, data: {cofirm: '本当に消しますか?' }, class: "btn btn-outline-danger" %>
+          <%= link_to '削除', public_post_path(post), method: :delete, class: "delete-btn btn btn-outline-danger" %>
             <%= form_with model: @post, url: public_edit_post_path(post), method: :patch do |f| %>
               <div class="form-check form-check-inline released-btn">
                 <div class="ml-5">
