--- a/app/views/public/topics/show.html.erb
+++ b/app/views/public/topics/show.html.erb
@@ -14,7 +14,7 @@
         </div>
         <% if  comment.user == current_user %>
           <div class="ml-auto bd-hightlight">
-            <%= link_to '削除', public_topic_topic_comment_path(comment.topic,comment), method: :delete, data: {cofirm: '本当に消しますか?' }, class: "btn btn-outline-danger mr-3" %>
+            <%= link_to '削除', public_topic_topic_comment_path(comment.topic,comment), method: :delete, class: "delete-btn btn btn-outline-danger mr-3" %>
           </div>
         <% end %>
       </div>
