--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -14,7 +14,7 @@
       一日を振り返って、達成度を投稿しましょう！
     </div>
 
-
+<!--現在の目標-->
     <div class="border border-primary my-4 p-4">
       <div class="h5 text-primary">現在の目標</div>
       <div class="d-flex bd-highlight py-2">
@@ -93,6 +93,7 @@
       </div>
     </div>
 
+<!--中期目標一覧-->
     <% if @goal.present? %>
       <div class="border border-info mt-5 p-4">
         <div class="text-primary pb-3">中期目標一覧</div>
@@ -100,7 +101,7 @@
           <div class="bd-highlight text-info">月の目標</div>
           <div class="bd-highlight flex-grow-1">
             <div class="pl-4 overflow-auto"  style="height:150px;">
-              <% @objectives_month.each do |month| %>
+              <% @objectives_months.each do |month| %>
                 <i class="fa-solid fa-fire-flame-curved"></i> <%= month.title %><br>
                   <% if month.did_it.present? %>　<i class="fa-solid fa-crop"></i>　<%= month.did_it %><br><% end %>
                   <% if month.could_not.present? %>　<i class="fa-solid fa-crop-simple"></i>　<%= month.could_not %><br><% end %>
@@ -112,7 +113,7 @@
           <div class="bd-highlight text-info">週の目標</div>
           <div class="bd-highlight flex-grow-1">
             <div class="pl-4 overflow-auto"  style="height:150px;">
-              <% @objectives_week.each do |week| %>
+              <% @objectives_weeks.each do |week| %>
                 <i class="fa-solid fa-fire-flame-curved"></i> <%= week.title %><br>
                   <% if week.did_it.present? %>　<i class="fa-solid fa-crop"></i>　<%= week.did_it %><br><% end %>
                   <% if week.could_not.present? %>　<i class="fa-solid fa-crop-simple"></i>　<%= week.could_not %><br><% end %>
@@ -122,6 +123,16 @@
         </div>
       </div>
     <% end %>
+
+
+<!--タグ新規作成-->
+    <div class="border border-success mt-5 p-4">
+      <div class="text-success pb-3">タグ新規作成</div>
+      <%= form_tag({controller:"homes", action:"top"}, method: :get) do %>
+        <%= text_field_tag :tag %>
+        <%= submit_tag 'タグを追加' %>
+      <% end %>
+    </div>
 
   </div>
 
