--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -48,7 +48,7 @@
           <% if @goal.present? %>
             <%= @goal.title %>
           <% else %>
-            目標が設定されていません　<%= link_to '設定する', new_public_goal_path, class: 'btn btn-outline-info' %>
+            未設定　<%= link_to '設定する', new_public_goal_path, class: 'btn btn-outline-info' %>
           <% end %>
         </div>
       </div>
