--- a/app/views/layouts/_user_info.html.erb
+++ b/app/views/layouts/_user_info.html.erb
@@ -3,17 +3,18 @@
   <div>
     <%= link_to public_user_path(user) do %>
       <%= image_tag user.get_icon_image(40,40), class: 'border rounded-circle' %>
-      <b><%= user.nickname %>さん</b>
+      <b><%= user.nickname %></b>
     <% end %>
+    さん
   </div>
   <div class="pt-2">
-    <span>目標 :　</span>
-    <span>
+    <div class="text-info">目標 :　</div>
+    <div class="pl-2">
       <% if goal.present? %>
         <%= goal.title %>
       <% else %>
         目標が設定されていません
       <% end %>
-    </span>
+    </div>
   </div>
 </div>
