--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -96,7 +96,7 @@
 <!--中期目標一覧-->
     <% if @goal.present? %>
       <div class="border border-info mt-5 p-4">
-        <div class="text-primary pb-3">中期目標一覧</div>
+        <div class="text-primary h5 pb-3">中期目標一覧</div>
         <div class="d-flex bd-highlight">
           <div class="bd-highlight text-info">月の目標</div>
           <div class="bd-highlight flex-grow-1">
@@ -127,11 +127,13 @@
 
 <!--タグ新規作成-->
     <div class="border border-success mt-5 p-4">
-      <div class="text-success pb-3">タグ新規作成</div>
-      <%= form_tag({controller:"homes", action:"top"}, method: :get) do %>
-        <%= text_field_tag :tag %>
-        <%= submit_tag 'タグを追加' %>
-      <% end %>
+      <div class="text-success h5 pb-3">タグ新規作成（投稿・トピック共通）</div>
+      <div class="d-flex justify-content-center">
+        <%= form_tag({controller:"homes", action:"top"}, method: :get) do %>
+          <%= text_field_tag :tag %>
+          <%= submit_tag 'タグを追加', class: 'btn btn-outline-success ml-4' %>
+        <% end %>
+      </div>
     </div>
 
   </div>
