--- a/app/views/layouts/_flash_notice.html.erb
+++ b/app/views/layouts/_flash_notice.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |key, message| %>
-  <p class="notice notice-<%= key %>">
+  <p class="notice notice-<%= key %> mt-3 mb-0">
     <%= message %>
   </p>
 <% end %>
