--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-     <header class="border-bottom pb-2">
+     <header class="border-bottom py-2">
       <div class="container col-11">
         <nav class="navbar navbar-expand-lg navbar-light mt-2 pt-4 pb-3 pr-0">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="Toggle navigation">
@@ -22,49 +22,49 @@
               <ul class="navbar-nav ml-auto">
                 <% if user_signed_in? %>
                   <li class="nav-item mx-3">
-                    <%= link_to 'TOP',public_root_path, class: 'nav-link text-dark border rounded' %>
+                    <%= link_to 'TOP',public_root_path, class: 'nav-link' %>
                   </li>
                   <li class="nav-item mx-3">
-                    <%= link_to 'マイページ',public_user_path(@current_user), class: 'nav-link text-dark border rounded' %>
+                    <%= link_to 'マイページ',public_user_path(@current_user), class: 'nav-link' %>
                   </li>
                   <li class="nav-item mx-3">
-                    <%= link_to 'ユーザー',public_users_path, class: 'nav-link text-dark border rounded' %>
+                    <%= link_to 'ユーザー',public_users_path, class: 'nav-link' %>
                   </li>
                   <li class="nav-item mx-3">
-                    <%= link_to '投稿',public_posts_path, class: 'nav-link text-dark border rounded' %>
+                    <%= link_to '投稿',public_posts_path, class: 'nav-link' %>
                   </li>
                   <li class="nav-item mx-3">
-                    <%= link_to 'ブックマーク',favorites_public_user_path(@current_user), class: 'nav-link text-dark border rounded' %>
+                    <%= link_to 'ブックマーク',favorites_public_user_path(@current_user), class: 'nav-link' %>
                   </li>
                   <li class="nav-item mx-3">
-                    <%= link_to 'トピック',public_topics_path, class: 'nav-link text-dark border rounded' %>
+                    <%= link_to 'トピック',public_topics_path, class: 'nav-link' %>
                   </li>
                   <li class="nav-item mx-3">
-                    <%= link_to 'ログアウト',destroy_user_session_path, method: :delete, class: 'nav-link text-dark border rounded'%>
+                    <%= link_to 'ログアウト',destroy_user_session_path, method: :delete, class: 'nav-link'%>
                   </li>
                 <% elsif admin_signed_in? %>
                   <li class="nav-item mx-3">
-                    <%= link_to 'ユーザー',public_users_path, class: 'nav-link text-dark border rounded' %>
+                    <%= link_to 'ユーザー',public_users_path, class: 'nav-link' %>
                   </li>
                   <li class="nav-item mx-3">
-                    <%= link_to 'ログアウト',destroy_user_session_path, method: :delete, class: 'nav-link text-dark border rounded'%>
+                    <%= link_to 'ログアウト',destroy_user_session_path, method: :delete, class: 'nav-link'%>
                   </li>
                 <% else %>
                   <li class="nav-item mx-3">
-                    <%= link_to 'About',public_about_path, class: 'nav-link text-dark border rounded' %>
+                    <%= link_to 'About',public_about_path, class: 'nav-link' %>
                   </li>
                   <li class="nav-item mx-3">
-                    <%= link_to '新規登録',new_user_registration_path, class: 'nav-link text-dark border rounded' %>
+                    <%= link_to '新規登録',new_user_registration_path, class: 'nav-link' %>
                   </li>
                   <li class="nav-item mx-3">
-                    <%= link_to 'ログイン',new_user_session_path, class: 'nav-link text-dark border rounded' %>
+                    <%= link_to 'ログイン',new_user_session_path, class: 'nav-link' %>
                   </li>
                 <% end %>
               </ul>
             </div>
         </nav>
-        <div class="row">
-          <div class="row col-4">
+        <div class="row pt-4">
+          <div class="row col-3">
             <% if user_signed_in? %>
               <%= link_to public_root_path do %>
                 <h2> ＼ 宣誓！／ </h2>
@@ -107,15 +107,14 @@
       <div class="container">
         <% if user_signed_in? %>
           <div class="d-flex justify-content-center mt-5">
-            <%= link_to 'お問い合わせフォーム',new_public_inquiry_path, class: 'text-info' %>
+            <%= link_to '＞＞お問い合わせフォーム',new_public_inquiry_path, class: 'text-secondary' %>
           </div>
         <% end %>
-        <div class="col-1 mx-auto my-5">
-          <p>sensei!</p>
+        <div class="col-1 mx-auto py-3">
+          <p class="footer-text">sensei!</p>
         </div>
       </div>
     </footer>
-
 
   </body>
 </html>
