--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container row">
 
   <!--サイドバー-->
-  <div class="col-3 mb-5 border-right border-info">
+  <div class="col-3 mb-5 sidebar">
     <%= render partial: 'layouts/user_info',locals: { user: @user,goal: @goal } %><br>
   </div>
 
