--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
   </head>
 
   <body>
@@ -63,7 +64,7 @@
               </ul>
             </div>
         </nav>
-        <div class="row pt-4">
+        <div class="row pt-4 header-logo">
           <div class="row col-3">
             <% if user_signed_in? %>
               <%= link_to public_root_path do %>
