--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,14 +1,14 @@
 <div class="row">
 
   <!--サイドバー-->
-  <div class="col-4 mb-5 pr-4 border-right border-info">
+  <div class="col-4 mb-5 pr-4 sidebar">
     <%= render partial: 'layouts/user_info',locals: { user: @user, goal: @goal } %><br>
     <%= render partial: 'calendar' ,locals: { post: @post } %><br>
     <%= render partial: 'public/posts/new',locals: { new_post: @new_post } %>
   </div>
 
   <div class="d-felx flex-column col-8 pl-4">
-    <div class="border border-info mb-4 p-4">
+    <div class="border border-info mb-4 p-4 info-gradient">
       こんにちは、<%= @current_user.nickname %>さん！<br>
       今日はどんな一日になりましたか？<br>
       一日を振り返って、達成度を投稿しましょう！
