--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,10 +45,10 @@
                   </li>
                 <% elsif admin_signed_in? %>
                   <li class="nav-item mx-3">
-                    <%= link_to 'ユーザー',public_users_path, class: 'nav-link' %>
+                    <%= link_to 'ユーザー',admin_root_path, class: 'nav-link' %>
                   </li>
                   <li class="nav-item mx-3">
-                    <%= link_to 'ログアウト',destroy_user_session_path, method: :delete, class: 'nav-link'%>
+                    <%= link_to 'ログアウト',destroy_admin_session_path, method: :delete, class: 'nav-link'%>
                   </li>
                 <% else %>
                   <li class="nav-item mx-3">
