--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -8,7 +8,7 @@
   </div>
 
   <div class="d-felx flex-column col-8 pl-4">
-    <div class="border border-info mb-4 p-4 info-gradient">
+    <div class="border border-info mb-4 p-4 top-gradient">
       こんにちは、<%= @current_user.nickname %>さん！<br>
       今日はどんな一日になりましたか？<br>
       一日を振り返って、達成度を投稿しましょう！
