--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -36,6 +36,16 @@
           <%= @user.email %>
         </div>
       </div>
+
+      <div class="d-flex bd-highlight mt-5 mb-3">
+        <div class="bd-highlight col-5 px-0 text-info">
+          会員ステータス
+        </div>
+        <div class="bd-highlight col-1"></div>
+        <div class="flex-grow-1 bd-highlight h5">
+          <%= @user.withdrawal_or_valibity %>
+        </div>
+      </div>
     </div>
 
     <div class="d-flex justify-content-around my-5">
