--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -25,7 +25,7 @@
           アイコン画像
         </div>
         <div class="flex-grow-1 bd-highlight ">
-          <%= f.file_field :image, accept: "image/*" %>
+          <%= f.file_field :icon_image, accept: "image/*" %>
         </div>
       </div>
 
