[fix]退会ユーザーの投稿閲覧制限

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container row">
+<div class="row">
 
   <div class="col-9 my-3 mx-auto">
     <div class="d-flex justify-content-around">
