--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,8 +64,8 @@
               </ul>
             </div>
         </nav>
-        <div class="row pt-4 header-logo">
-          <div class="row col-3">
+        <div class="pt-4 header-logo d-flex bd-hightlight">
+          <div class="bd-hightlight">
             <% if user_signed_in? %>
               <%= link_to public_root_path do %>
                 <h2> ＼ 宣誓！／ </h2>
@@ -80,12 +80,12 @@
               <% end %>
             <% end %>
           </div>
-          <div>
+          <div class="flex-grow-1 bd-hightlight">
             <%= render partial: 'layouts/flash_notice' %>
             <p class="notice"><% notice %></p>
           </div>
           <!--検索窓-->
-            <div class="search-form col-3 py-1 px-1 my-2 mr-3 ml-auto border border-secondary">
+            <div class="search-form col-3 py-1 px-1 my-2 mr-3 ml-auto bd-hightlight border border-secondary">
               <%= form_tag({controller:"public/posts", action:"index"}, method: :get) do %>
                 <%= text_field_tag( "search","",{ placeholder: "投稿をキーワードで検索", class: "p-0 col-11", style: "border: none" }) %>
                 <%= button_tag type: 'submit', class: 'btn btn-outline-info p-0', style: "border: none" do %>
