--- a/app/views/layouts/post_partial/_body.html.erb
+++ b/app/views/layouts/post_partial/_body.html.erb
@@ -23,9 +23,13 @@
         </div>
       </div>
     <% else %>
-      <%= link_to public_user_path(post.user.id), class: 'text-dark mr-auto bd-hightlight h5' do %>
-        <%= image_tag post.user.get_icon_image(30,30), class: 'border rounded-circle' %>
-          <span class="border-bottom border-dark"><%= post.user.nickname %></span>
+      <% if user.is_deleted == false %>
+        <%= link_to public_user_path(post.user.id), class: 'text-dark mr-auto bd-hightlight h5' do %>
+          <%= image_tag post.user.get_icon_image(30,30), class: 'border rounded-circle' %>
+            <span class="border-bottom border-dark"><%= post.user.nickname %></span>
+        <% end %>
+      <% else %>
+        <span class="mr-auto bd-hightlight">退会済みのユーザー</span>
       <% end %>
     <% end %>
 <!--非公開アイコン-->
