--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -7,7 +7,7 @@
       <%= render partial: 'layouts/tag_search' %>
     <% end %>
   </div>
-
+  <!---->
 
   <div class="col-9">
     <div class="d-flex justify-content-center">
@@ -15,8 +15,10 @@
     </div>
     <div>
       <% @posts.each do |post| %>
-        <%= render partial: 'layouts/post_partial/body',locals: { post: post, user: @user, current_user: @current_user }  %>
-        <%= render partial: 'layouts/post_partial/footline_go_to_show',locals: { post: post, user: @user, current_user: @current_user }  %>
+        <% if post.user.is_deleted == false %>
+          <%= render partial: 'layouts/post_partial/body',locals: { post: post, user: post.user, current_user: @current_user }  %>
+          <%= render partial: 'layouts/post_partial/footline_go_to_show',locals: { post: post, user: @user, current_user: @current_user }  %>
+        <% end %>
       <% end %>
     </div>
   </div>
