--- a/app/views/public/topics/new.html.erb
+++ b/app/views/public/topics/new.html.erb
@@ -1,11 +1,14 @@
+<div class="d-flex justify-content-center">
+  <div class="h5 text-info">トピック新規作成</div>
+</div>
 <%= form_with model: @topic, url: public_topics_path, method: :post do |f| %>
-  <div class="d-flex justify-content-between my-3">
-    <div class="col-2">トピック名</div>
-    <div class="col-10"><%= f.text_field :title, placeholder:"トピック名を入力", class: 'px-1 col-12' %></div>
+  <div class="my-3">
+    <div class="text-info">トピック名</div>
+    <div class="col-10 mt-2"><%= f.text_field :title, placeholder:"トピック名を入力", class: 'px-1 col-12' %></div>
   </div>
 
-    <div class="mb-2">タグ(複数選択可)</div>
-    <div class="form-group ml-3">
+    <div class="mt-5 text-info">タグ(複数選択可)</div>
+    <div class="form-group ml-3 mt-3">
       <%= f.collection_check_boxes(:tag_ids, Tag.all, :id, :name)  do |tag| %>
         <div class="mx-1 mb-2 form-check-inline">
           <%= tag.label class: 'form-check-label' do %>
@@ -16,7 +19,7 @@
       <% end %>
     </div>
 
-  <div class="d-flex justify-content-center mb-3">
+  <div class="d-flex justify-content-center my-5">
     <div><%= f.submit "作成", class: 'btn btn-outline-info' %></div>
   </div>
 <% end %>
