--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,9 +1,10 @@
-<div class="container row">
+<div class="row">
 
   <!--サイドバー-->
   <div class="col-3 mb-5 sidebar">
     <%= render partial: 'layouts/user_info',locals: { user: @user,goal: @goal } %><br>
   </div>
+  <!---->
 
   <div class="col-8 my-3">
     <div class="d-flex justify-content-center">
