--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -15,7 +15,7 @@
     </div>
 
 <!--現在の目標-->
-    <div class="border border-primary my-4 p-4">
+    <div class="border border-primary my-4 p-4 back-fish">
       <div class="h5 text-primary">現在の目標</div>
       <div class="d-flex bd-highlight py-2">
         <div class="bd-highlight text-info">最終目標　　：　</div>
@@ -95,7 +95,7 @@
 
 <!--中期目標一覧-->
     <% if @goal.present? %>
-      <div class="border border-info mt-5 p-4">
+      <div class="border border-info mt-5 p-4 back-fish">
         <div class="text-primary h5 pb-3">中期目標一覧</div>
         <div class="d-flex bd-highlight">
           <div class="bd-highlight text-info">月の目標</div>
