--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,4 +1,5 @@
 <div class="row">
+  <!--サイドバー-->
   <div class="col-3">
     <div class="border-bottom border-info pb-3 mb-5">
       <%= form_tag({controller:"posts",action:"index"}, method: :get) do %>
@@ -6,6 +7,8 @@
       <% end %>
     </div>
   </div>
+  <!---->
+
   <div class="col-9">
   <div class="d-flex justify-content-center">
     <div class="h5"><%= @user.nickname %>さんの投稿一覧</div>
@@ -17,57 +20,9 @@
           <div class="mr-auto bd-hightlight">
             <%= link_to '削除', admin_post_path(post), method: :delete, data: {cofirm: '本当に消しますか?' }, class: "btn btn-outline-danger" %>
           </div>
-          <% if post.is_released == false %>
-            <div class="mx-2">
-              <i class="fa-solid fa-lock fa-lg" style="color:#17a2b8"></i>
-            </div>
-          <% end %>
-          <div class="bd-hightlight text-secondary"><%= post.created_at.strftime('%Y/%m/%d %H:%M') %></div>
-          <div class="bd-hightlight ml-3">
-            <% if post.achivement == "excellence" %>
-              <span><i class="fa-regular fa-face-laugh-squint fa-2x" style="color:#17a2b8"></i></span>
-            <% elsif post.achivement == "good" %>
-              <span><i class="fa-regular fa-face-smile fa-2x" style="color:#17a2b8"></i></span>
-            <% else %>
-              <span><i class="fa-regular fa-face-rolling-eyes fa-2x" style="color:#17a2b8"></i></span>
-            <% end %>
-          </div>
-        </div>
 
-        <div class="border border-secondary mt-2 mx-3 px-1">
-          <%= post.body %>
-        </div>
+        <%= render partial: 'common_post',locals: { post: post } %>
 
-        <div class="ml-4 text-info">
-          <% post.tags.each do |tag| %>
-            # <%= tag.name %>
-          <% end %>
-        </div>
-
-        <% if post.tomorrow_objective.present? %>
-          <div class="pl-2 mt-2">明日の目標</div>
-          <div class="border border-secondary mx-3 px-1">
-            <%= post.tomorrow_objective %>
-          </div>
-        <% end %>
-
-        <div class="d-flex bd-hightlight m-3">
-          <div class="bd-hightlight text-info mr-3">
-            <i class="fa-solid fa-thumbs-up fa-2x" style="color:#17a2b8"></i> <%= Favorite.types_i18n[:nice] %>
-            <%= post.favorites.where(type: 'nice').count %>
-          </div>
-          <div class="bd-hightlight text-info mr-3">
-            <i class="fa-solid fa-heart fa-2x" style="color:#17a2b8"></i> <%= Favorite.types_i18n[:like] %>
-            <%= post.favorites.where(type: 'like').count %>
-          </div>
-          <div class="bd-hightlight text-info mr-3">
-            <i class="fa-solid fa-hand-fist fa-2x" style="color:#17a2b8"></i> <%= Favorite.types_i18n[:fight] %>
-            <%= post.favorites.where(type: 'fight').count %>
-          </div>
-          <div class="border border-info ml-auto px-2 bd-hightlight d-flex align-items-center text-info">
-            合計 <%= post.favorites.count %>
-          </div>
-        </div>
         <div class="d-flex justify-content-end">
           <div class="text-secondary mt-2 mr-3">コメント件数：<%= post.post_comments.count %></div>
           <div><%= link_to 'コメントを見る',admin_post_path(post), class: 'btn btn-outline-secondary mr-3' %></div>
