--- a/app/views/admin/posts/_common_post.html.erb
+++ b/app/views/admin/posts/_common_post.html.erb
@@ -1,10 +1,16 @@
 <!--引用先に<div class="d-flex bd-hightlight">があることを確認-->
+
+<!--非公開アイコン-->
   <% if post.is_released == false %>
     <div class="mx-2">
       <i class="fa-solid fa-lock fa-lg" style="color:#17a2b8"></i>
     </div>
   <% end %>
+  
+  <!--投稿日時-->
   <div class="bd-hightlight text-secondary"><%= post.created_at.strftime('%Y/%m/%d %H:%M') %></div>
+  
+  <!--達成度アイコン-->
   <div class="bd-hightlight ml-3">
     <% if post.achivement == "excellence" %>
       <span><i class="fa-regular fa-face-laugh-squint fa-2x" style="color:#17a2b8"></i></span>
@@ -16,16 +22,26 @@
   </div>
 </div>
 
+<!--本文-->
 <div class="border border-secondary mt-2 mx-3 px-1">
   <%= post.body %>
 </div>
 
+<!--タグ-->
 <div class="ml-4 text-info">
   <% post.tags.each do |tag| %>
     # <%= tag.name %>
   <% end %>
 </div>
 
+<!--投稿画像-->
+<% if post.image.filename != 'default-image.jpg' %>
+  <div class="d-flex justify-content-center">
+    <div><%= image_tag post.get_image(100,100) %></div>
+  </div>
+<% end %>
+
+<!--明日の目標-->
 <% if post.tomorrow_objective.present? %>
   <div class="pl-2 mt-2">明日の目標</div>
   <div class="border border-secondary mx-3 px-1">
