--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,13 +1,13 @@
 <div class="row">
 
   <!--サイドバー-->
-  <div class="col-4 mb-5 pr-4 sidebar">
+  <div class="col-lg-4 col-12 mb-5 pr-4 sidebar">
     <%= render partial: 'layouts/user_info',locals: { user: @user, goal: @goal } %><br>
     <%= render partial: 'calendar' ,locals: { post: @post } %><br>
     <%= render partial: 'public/posts/new',locals: { new_post: @new_post } %>
   </div>
 
-  <div class="d-felx flex-column col-8 pl-4">
+  <div class="d-felx flex-column col-lg-8 col-12 pl-4">
     <div class="border border-info mb-4 p-4 top-gradient">
       こんにちは、<%= @current_user.nickname %>さん！<br>
       今日はどんな一日になりましたか？<br>
