--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,12 +1,12 @@
 <div class="row">
 
   <!--サイドバー-->
-  <div class="col-3 mb-5 sidebar">
+  <div class="col-md-3 col-12 mb-5 sidebar">
     <%= render partial: 'layouts/user_info',locals: { user: @user, goal: @goal } %><br>
   </div>
 
 
-  <div class="col-9">
+  <div class="col-md-9 col-12">
 
     <div class="d-flex justify-content-center">
       <div class="h5">投稿詳細ページ</div>
